# lasso

./: .gitignore  .npmignore  ARCHITECTURE.md  LICENSE  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt.md  README.ru.md  package-lock.json  package.json  tsconfig.json
.devteam/: devteam.db
doc/: KEY-GUIDE.md  SELECTOR-MAINTENANCE.md  TROUBLESHOOTING.md
fixtures/serp-baseline/: README.md
rust-helper/: .gitignore  Cargo.toml  README.md
rust-helper/examples/: smoke_api.rs  smoke_applescript.rs  smoke_cgevent.rs
rust-helper/src/: app_bundle_map.rs  applescript.rs  applescript_whitelist.rs  atspi.rs  ax.rs  ax_role_map.rs  cgevent.rs  cgevent_keymap.rs  lib.rs  main.rs  protocol.rs  screenshot.rs  tcc.rs  uia.rs  windows.rs
rust-helper/tests/: applescript_whitelist.rs  ax_role_map.rs  cgevent_keymap.rs  protocol.rs  windows_list.rs
scripts/: ab-queries.json  check-invariants.js
src/: index.ts  types.ts
src/benchmark/: run-ab-benchmark.ts
src/browse/: ExpectPoll.ts  HighRiskGate.ts  StealthEngine.ts  StepEngine.ts  cdp-actions.ts  content-filter-cite.ts  content-type-router.ts  markdown-extractor.ts  stealth-profiles.ts  steps-types.ts
src/channels/: BaseChannel.ts  BingChannel.ts  BraveChannel.ts  BrowseChannel.ts  BrowserbaseChannel.ts  DesktopChannel.ts  HeadlessChannel.ts  LoggedInChannel.ts  MachineMcpSearchChannel.ts  SearchChannel.ts  StagehandChannel.ts  UiChannel.ts
src/config/: config.ts  provider-registry.ts  providers.ts  quota-ledger.ts
src/desktop/: AppleScriptProvider.ts  AxBackend.ts  (+10 more)
(+166 files in other folders)
