[package]
name = "lasso-rust-helper"
version = "0.1.0"
edition = "2021"
description = "Lasso DesktopChannel Rust helper: AXAPI + screenshot + TCC via JSON-lines over stdio."
license = "MIT"

[lib]
name = "lasso_rust_helper"
path = "src/lib.rs"

[[bin]]
name = "lasso-rust-helper"
path = "src/main.rs"

[dependencies]
# AXAPI safe wrapper (andrewhickman/accessibility-rs).
accessibility = "0.2"
# AXAPI raw FFI fallback for symbols the safe wrapper does not expose
# (e.g. AXUIElementCopyMultipleAttributeValues, AXIsProcessTrustedWithOptions,
# AXUIElementCreateSystemWide / CreateApplication if not re-exported by safe crate).
accessibility-sys = "0.2"
# core-foundation: CFString / CFArray / CFDictionary / CFBoolean primitives.
core-foundation = "0.10"
core-foundation-sys = "0.8"
# core-graphics + core-graphics-types: CGPoint/CGSize/CGRect + CGWindowList 截屏.
core-graphics = "0.24"
core-graphics-types = "0.2"
# foreign-types-shared: ForeignType trait for CGImage::as_ptr()（core-graphics 内部也用）.
foreign-types-shared = "0.3"
# Error handling.
thiserror = "1"
# Protocol (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Request id generation.
uuid = { version = "1", features = ["v4"] }
# PNG base64 encoding (screenshot).
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
